2026-02-18  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.3.3 only prepend the overall title to the track title,
	  if the overall title has been derived from a prefix

	* v0.3.2 new option -u/--unitary

2026-02-17  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.3.1 bugfix: --add_artists reincarnated artists from
  	  deselected tracks, messing up the heuristics for composer
	  and performer.

	* v0.3.0
	* streamlined the treatment of single movement pieces
	* much cleaner interplay of editing and extracting
	  common prefixes of track titles

2026-02-16  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* Tagged: special treatment of single movement pieces

2026-02-12  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* better error reporting if discid is missing in release

2026-02-11  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.2.0: feature set feels complete for the first time
	* --delete_artists accepts track ranges
	* --edit_track_titles new
	* --edit_artists new
	* --add_artist new

2026-02-10  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* Sets.Integer: new
	* Perl.S/M.ranged: new

2026-02-10  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.6: cleanups
	* bin/pml.ml: split off bin/pml_admin.ml

2026-02-09  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.5: new option --delete_artist, -C and -P accept regular expressions

2026-02-09  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.4: handle multi-composer discs better:
	* lib/artist_type.ml: rank of persons with more than one role
	* lib/tagged.ml: select composer and performer from the artists
  	   common to all selected tracks.
	* lib/edit.ml: don't compress white space in filenames anymore
	* factorize CLI

2026-02-08  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.3: Edit.perl_s: mimic perl's "s/regexp/subst/flags"
	commands (without leading 's')

2026-02-07  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.2: add --edit_prefix and --edit_title
